--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 python-dotenv = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
